k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zanzibar-service
  namespace: zanzibar-lounge
  labels:
    app.kubernetes.io/name: zanzibar-lounge
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: zanzibar-lounge
